changed btn-group-vertical from inline-block to block to fix shortened wrapping

--- a/styles/less/button-variables.less
+++ b/styles/less/button-variables.less
@@ -6,6 +6,10 @@
   display: inherit !important;
 }
 
+.btn-group-vertical {
+  display: block !important;
+}
+
 .btn-group-vertical>.btn-group>.btn {
   display: block !important;
   width: auto !important; 
